# FaceDetection-with-Qt5-and-OpenCV

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: detect.cpp.1C8F4CCE807B89D4.idx  detect.h.1007C2101A48F2B8.idx  imgproc.cpp.A6ED95C9A6EE4424.idx  imgproc.h.11B7E03BDF9CEEB5.idx  main.cpp.436495257B114DDE.idx  precom_Header.h.194850700B094DFC.idx  trainimage.cpp.AEEC9AB48640E9E9.idx  trainimage.h.34B80BA58BBB20B3.idx
Detect/: CMakeLists.txt
Detect/src/: detect.cpp  detect.ui
Detect/src/Header/: detect.h
ImgProc/: CMakeLists.txt
ImgProc/src/: imgproc.cpp  imgproc.ui
ImgProc/src/Header/: imgproc.h
InfoOnApp/: CMakeLists.txt
InfoOnApp/src/: infoapp.cpp  infoapp.ui
InfoOnApp/src/Header/: infoapp.h
Precompiled_H/: CMakeLists.txt  precom_Header.h
TrainImage/: CMakeLists.txt
TrainImage/src/: trainimage.cpp  trainimage.ui
TrainImage/src/Header/: trainimage.h  trainimage.h.autosave
mainProjEx/: CMakeLists.txt  main.cpp
precompHeader/: CMakeLists.txt  preH.h  preH.h.gch
